--- a/Source/Shell/API.Shell/API.Shell.csproj
+++ b/Source/Shell/API.Shell/API.Shell.csproj
@@ -5,8 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.Net.Http" Version="4.3.4" />
     <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.2.0" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Service Layer\API.Controller.csproj" />
+  </ItemGroup>
+
 
 </Project>
