--- a/Source/Shell/API.Shell/Properties/launchSettings.json
+++ b/Source/Shell/API.Shell/Properties/launchSettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "iisSettings": {
     "windowsAuthentication": true,
     "anonymousAuthentication": true,
@@ -16,7 +16,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "CallAction",
+      "launchUrl": "StartingApp",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
