Update Structure callaction

--- a/Source/Service Layer/API.Controller/API.Controller.csproj
+++ b/Source/Service Layer/API.Controller/API.Controller.csproj
@@ -14,4 +14,8 @@
     <Folder Include="Services\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\API.Model\API.Model.csproj" />
+  </ItemGroup>
+
 </Project>
