--- a/Source/Shell/API.Shell/Properties/launchSettings.json
+++ b/Source/Shell/API.Shell/Properties/launchSettings.json
@@ -16,7 +16,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "StartingApp",
+      "launchUrl": "CallAction",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
