--- a/Source/Service Layer/API.Controller/API.Controller.csproj
+++ b/Source/Service Layer/API.Controller/API.Controller.csproj
@@ -14,4 +14,13 @@
     <ProjectReference Include="..\API.Model\API.Model.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Base.Securit.Web.API">
+      <HintPath>..\..\..\..\Base.API\Base.API\Sources\Base.Securit.Web.API\bin\Debug\netstandard2.0\Base.Securit.Web.API.dll</HintPath>
+    </Reference>
+    <Reference Include="Base.Web.API">
+      <HintPath>..\..\..\..\Base.API\Base.API\Sources\Base.Web.API\bin\Debug\netstandard2.0\Base.Web.API.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
