--- a/Source/Service Layer/API.Controller/API.Controller.csproj
+++ b/Source/Service Layer/API.Controller/API.Controller.csproj
@@ -6,11 +6,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0" />
     <PackageReference Include="System.Net.Http" Version="4.3.4" />
     <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.2.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\Base.API\Base.API\Sources\Base.Web.API\Base.Web.API.csproj" />
     <ProjectReference Include="..\API.Model\API.Model.csproj" />
   </ItemGroup>
 
