--- a/Source/Shell/API.Shell/API.Shell.csproj
+++ b/Source/Shell/API.Shell/API.Shell.csproj
@@ -6,9 +6,12 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\Base.API\Base.API\Sources\Base.Web.API\Base.Web.API.csproj" />
     <ProjectReference Include="..\..\Service Layer\API.Controller\API.Controller.csproj" />
   </ItemGroup>
 
