--- a/Source/Shell/API.Shell/appsettings.json
+++ b/Source/Shell/API.Shell/appsettings.json
@@ -6,5 +6,13 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Name": "TEMPORARY_WEBSITE",
+    "connectionString": "Data Source=(local)",
+    "User": "Id=sa",
+    "Password": "Password1",
+    "MultipleActiveResultSets": "True",
+    "providerName": "System.Data.SqlClient"
+  }
 }
