--- a/Source/Service Layer/API.Controller/API.Controller.csproj
+++ b/Source/Service Layer/API.Controller/API.Controller.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.7" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0" />
     <PackageReference Include="System.Net.Http" Version="4.3.4" />
@@ -13,7 +14,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\Base.API\Sources\Base.Web.API\Base.Web.API.csproj" />
     <ProjectReference Include="..\API.Model\API.Model.csproj" />
   </ItemGroup>
 
