--- a/Source/Shell/API.Shell/appsettings.json
+++ b/Source/Shell/API.Shell/appsettings.json
@@ -6,13 +6,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "Name": "TEMPORARY_WEBSITE",
-    "connectionString": "Data Source=(local)",
-    "User": "Id=sa",
-    "Password": "Password1",
-    "MultipleActiveResultSets": "True",
-    "providerName": "System.Data.SqlClient"
-  }
+  "AllowedHosts": "*"
 }
