--- a/.gitignore
+++ b/.gitignore
@@ -135,3 +135,7 @@ _NCrunch*
 trunk/BuildNote/BuildNote.txt
 trunk/libs
 /BasePackages/netstandard2.0/*.json
+/BasePackages/netcoreapp3.1/Bse.API.Controller.deps.json
+/BasePackages/netcoreapp3.1/Base.Web.API.deps.json
+/BasePackages/netcoreapp3.1/Base.Securit.Web.API.deps.json
+/BasePackages/netcoreapp3.1/Base.API.Model.deps.json
