Adding Entity Faramework into the API, but connection is in the base layer

--- a/.gitignore
+++ b/.gitignore
@@ -139,3 +139,5 @@ trunk/libs
 /BasePackages/netcoreapp3.1/Base.Web.API.deps.json
 /BasePackages/netcoreapp3.1/Base.Securit.Web.API.deps.json
 /BasePackages/netcoreapp3.1/Base.API.Model.deps.json
+/BasePackages/netcoreapp3.1/Base.Web.API.runtimeconfig.dev.json
+/BasePackages/netcoreapp3.1/Base.Web.API.runtimeconfig.json
