--- a/Source/Shell/API.Shell/App.config
+++ b/Source/Shell/API.Shell/App.config
@@ -12,3 +12,5 @@
   </connectionStrings>
 
 </configuration>
+
+<!--Scaffold-DbContext -Connection "Server=(local);Database=TEMPORARY_WEBSITE;Trusted_Connection=True;" -Provider Microsoft.EntityFrameworkCore.SqlServer -OutputDir Model -Context "TEMPORARY_WEBSITE" -DataAnnotations -Force -Project API.Entities -StartupProject API.Entities-->
