Update base layer for entity frame work

--- a/Source/Shell/API.Shell/App.config
+++ b/Source/Shell/API.Shell/App.config
@@ -3,6 +3,7 @@
 
   <appSettings>
     <add key="APIMessage" value="API Is Running"/>
+    <add key="ConnectionString" value="Server=(local);Database=TEMPORARY_WEBSITE;Trusted_Connection=True;"/>
   </appSettings>
 
 
